Bug Fix - practice area dropdown being covered

--- a/src/styles/Case.css
+++ b/src/styles/Case.css
@@ -217,7 +217,6 @@
   padding: 15px 20px 0px 20px;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   order: 1;
 }
 .case-top-bar {
